# Regression_ML-End-to-End

./: .gitignore  Dockerfile.streamlit  LICENSE  README.md  ROADMAP.md  app.py  housing-api-task-def.json  project_instructions.txt  pyproject.toml  streamlit-task-def.json
.github/workflows/: ci-cd.yml
docs/: interview-qna.md  project-walkthrough.md
notebooks/: 00_data_split.ipynb  01_EDA_cleaning.ipynb  02_feature_eng_encoding.ipynb  03_baseline.ipynb  04_linear_regression_regularization.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MFlow.ipynb  07_S3_push_datasets_AWS.ipynb
scripts/: 02_feature_eng.py  clean_holdout.py  provision_aws.py  setup_iam.py  setup_infra.py  update_services.py
src/api/: main.py
src/batch/: run_monthly.py
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: eval.py  train.py  tune.py
tests/: data_quality.py  smoke_test_.ipynb  test_features.py  test_inference.py
